tests/resources/valid/function/exception_and_type.mamba
class MyErr isa Exception

# Function does never return integer
def f(x: Int) -> Int raise [MyErr] => raise MyErr()
