tests/resources/invalid/type/class/incompat_parent_generics.mamba
class SuperClass[B isa Int]

class MyClass[A isa String] isa SuperClass[A]
    def my_fun(x: A) -> A => x
